--- a/aula2.html
+++ b/aula2.html
@@ -1722,6 +1722,7 @@ controllers/home.js .
 					<ul>
 						<li>Em sua dashboard (<a href="https://dashboard.heroku.com/apps" target="_blank">https://dashboard.heroku.com/apps</a>) Crie um novo projeto</li>
 					</ul>
+					<p>var port = process.env.PORT || 3000;</p>
 					<pre class="stretch">
 							<code class="line-numbers" data-trim >
 								$ cd my-project/
