--- a/aula2.html
+++ b/aula2.html
@@ -180,9 +180,7 @@
 				</section>
 				<section>
 					<h2>Módulo</h2>
-					<p>Esses módulos já são preparados para trabalhar desde uma infraestrutura mínima até uma mais en-
-						xuta, permitindo trabalhar desde arquiteturas RESTFul, padrão MVC (Model-View-
-						Controller) e também com conexões real-time utilizando WebSockets.</p>
+					<p>Esses módulos já são preparados para trabalhar desde uma infraestrutura mínima até uma mais enxuta, permitindo trabalhar desde arquiteturas RESTFul, padrão MVC (Model-View-Controller) e também com conexões real-time utilizando WebSockets.</p>
 				</section>
 				<section>
 					<h2>Módulo HTTP nativo</h2>
@@ -814,7 +812,7 @@ controllers/home.js .
 				<section>
 					<h2>Implementar os contatos</h2>
 					<p>Controller, routes e view para os contatos</p>
-					<p>Contatos seá a pagina após logado no sistema</p>
+					<p>Contatos será a pagina após logado no sistema</p>
 				</section>
 				<section>
 					<h2>views/contatos/index.ejs</h2>
@@ -1720,9 +1718,11 @@ controllers/home.js .
 				<section>
 					<h2> Criando um APP heroku</h2>
 					<ul>
-						<li>Em sua dashboard (<a href="https://dashboard.heroku.com/apps" target="_blank">https://dashboard.heroku.com/apps</a>) Crie um novo projeto</li>
+						<li>Em sua dashboard
+							<br/><a href="https://dashboard.heroku.com/apps" target="_blank">https://dashboard.heroku.com/apps</a>)
+							<br/>Crie um novo projeto</li>
 					</ul>
-					<p>var port = process.env.PORT || 3000;</p>
+					<p>(app.js)var port = process.env.PORT || 3000;</p>
 					<pre class="stretch">
 							<code class="line-numbers" data-trim >
 								$ cd my-project/
@@ -1735,6 +1735,7 @@ controllers/home.js .
 						</pre>
 				</section>
 				
+				
 
 				<section>
 					<h2>Projeto final da disciplina</h2>
@@ -1743,6 +1744,39 @@ controllers/home.js .
 					<p class="fragment">Obrigatório uso do ExpressJS e Mongoose (próxima aula)</p>
 					<p class="fragment">Não será necessário o projeto completo. Basta um crud funcionando completo</p>
 				</section>
+				<section>
+						<h2>Critérios de avaliação do projeto</h2>
+						<table>
+							<tr>
+								<th>Critério</th>
+								<th>Peso</th>
+							</tr>
+							<tr>
+								<td>Organização do código</td>
+								<td>1.0</td>
+							</tr>
+							<tr>
+								<td>Persistencia (MongoDB)</td>
+								<td>2.0</td>
+							</tr>
+							<tr>
+								<td>Interface RESTFul</td>
+								<td>3.0</td>
+							</tr>
+							<tr>
+								<td>Projeto funcionando</td>
+								<td>4.0</td>
+							</tr>
+							<tr>
+								<td>Projeto em produção</td>
+								<td>+1.0</td>
+							</tr>
+							<tr>
+								<td>Total</td>
+								<td>10.0</td>
+							</tr>
+						</table>
+					</section>
 				<section>
 					<h2>Referências</h2>
 					<ul>
