Atualizando agenda de conteudos

--- a/aula2.html
+++ b/aula2.html
@@ -54,6 +54,20 @@
 					<img class="stretch" src="images/logo_unoesc.jpg"/>
 				</section>
 				<section>
+					<h2>Agenda do encontro</h2>
+					<ul>
+						<li>Desenvolvimento assincrono</li>
+						<li>Aplicações WEB (nativo)</li>
+						<li>Express</li>
+						<li>MVC</li>
+						<li>EJS, Sessão,body-parser</li>
+						<li>Padrão REST</li>
+						<li>Persistencia com BD</li>
+						<li>Socket.IO</li>
+
+					</ul>
+				</section>
+				<section>
 					<h2>Dicas para Desenvolvimento assincrono</h2>
 					<p>
 						<pre class="stretch">
