--- a/aula2.html
+++ b/aula2.html
@@ -56,7 +56,7 @@
 				<section>
 					<h2>Agenda do encontro</h2>
 					<ul>
-						<li>Desenvolvimento assincrono</li>
+						<li>Desenvolvimento assíncrono</li>
 						<li>Aplicações WEB (nativo)</li>
 						<li>Express</li>
 						<li>MVC</li>
